updoot 15 [UwU]... shenanigans

--- a/application/graduate.html
+++ b/application/graduate.html
@@ -145,8 +145,12 @@
                       <span id="form-page"></span>
                     </div>
                     <div class="form-nav-container">
-                      <div id="form-prev" class="form-nav">prev</div>
-                      <div id="form-next" class="form-nav">next</div>
+                      <div id="form-prev" class="form-nav nav-item">
+                        <img src="/assets/left.png" alt="Previous Navigation Btn.">
+                      </div>
+                      <div id="form-next" class="form-nav nav-item reverse">
+                        <img class="reverse" src="/assets/left.png" alt="Next Navigation Btn.">
+                      </div>
                     </div>
                   </div>
                   <div data-form-step="1" class="form-body">
