--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       </section>
     </div>
 
-    <div class="section-wrapper">
+    <div class="section-wrapper solid-bg">
       <section id="impact-section" class="split-row section-container">
         <div class="row-half left master">
           <div class="svg-group">
@@ -374,18 +374,90 @@
       </section>
     </div>
 
-    <div class="section-wrapper">
-      <section class="section-container split-row">
+    <div class="section-wrapper solid-bg">
+      <section id="updates-section" class="section-container split-row">
         <div class="row-half right">
-          <div class="large-text text-header">
+          <div class="large-text header-text lowcase">
             Most Recent Updates
           </div>
           <div class="medium-text">
             At EducationUSA, our vision is to be the preferred financial service provider, offering innovative mortgage and real estate finance solutions.
           </div>
+          <div class="read-more div btn plain">
+            read more
+          </div>
         </div>
         <div class="row-half left master">
-          
+          <div class="updates-navigation">
+            <div id="updates-slider-prev" class="nav-item">
+              <img class="nav-btn" src="/assets/left.png" alt="Left Navigation Arrow.">
+            </div>
+            <div id="updates-slider-next" class="nav-item">
+              <img class="nav-btn reverse" src="/assets/left.png" alt="Right Navigation Arrow.">
+            </div>
+          </div>
+          <div id="updates-slider" class="updates-container">
+            <div class="update-details">
+              <div class="update-image"></div>
+              <div class="update-text">
+                <div class="update-title">Empowering bright Nigerians</div>
+                <div class="update-subtext">
+                  At EducationUSA, our vision is to help financially lacking gifted students ….
+                </div>
+                <div class="read-more div btn plain">
+                  read more
+                </div>
+              </div>
+            </div>
+            <div class="update-details">
+              <div class="update-image"></div>
+              <div class="update-text">
+                <div class="update-title">Empowering bright Nigerians</div>
+                <div class="update-subtext">
+                  At EducationUSA, our vision is to help financially lacking gifted students ….
+                </div>
+                <div class="read-more div btn plain">
+                  read more
+                </div>
+              </div>
+            </div>
+            <div class="update-details">
+              <div class="update-image"></div>
+              <div class="update-text">
+                <div class="update-title">Empowering bright Nigerians</div>
+                <div class="update-subtext">
+                  At EducationUSA, our vision is to help financially lacking gifted students ….
+                </div>
+                <div class="read-more div btn plain">
+                  read more
+                </div>
+              </div>
+            </div>
+            <div class="update-details">
+              <div class="update-image"></div>
+              <div class="update-text">
+                <div class="update-title">Empowering bright Nigerians</div>
+                <div class="update-subtext">
+                  At EducationUSA, our vision is to help financially lacking gifted students ….
+                </div>
+                <div class="read-more div btn plain">
+                  read more
+                </div>
+              </div>
+            </div>
+            <div class="update-details">
+              <div class="update-image"></div>
+              <div class="update-text">
+                <div class="update-title">Empowering bright Nigerians</div>
+                <div class="update-subtext">
+                  At EducationUSA, our vision is to help financially lacking gifted students ….
+                </div>
+                <div class="read-more div btn plain">
+                  read more
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
