updoot 16 [:~~] bloom bloom bloom

--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
         <section id="contact-section" class="section-container split-row">
           <!-- <div class="contact-row"> -->
             <div class="row-half left contact-details">
-              <div class="header-text medium-text">EducationUSA</div>
+              <div class="header-text medium-text">Education<span class="accented-text">USA</span></div>
               <div class="contact-description">
                 <p>
                   We assist talented and determined, low-income <br>
