--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
     <div class="section-wrapper">
       <section id="entertainment-section" class="section-container">
         <div class="section-header">
-          <span class="large-text header-text">
+          <span class="large-text header-text lowcase">
             Stay informed, <br />
             Stay entertained
           </span>
