--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
     <div class="section-wrapper">
       <section id="about-us-section" class="split-row section-container">
-        <div class="row-half right master">
+        <div class="row-half right">
           <div class="svg-group">
             <div class="main-image">
               <div class="top-right"></div>
@@ -276,7 +276,7 @@
 
     <div class="section-wrapper solid-bg">
       <section id="impact-section" class="split-row section-container">
-        <div class="row-half left master">
+        <div class="row-half left">
           <div class="svg-group">
             <div class="main-image">
               <div class="top-right"></div>
@@ -387,7 +387,7 @@
             read more
           </div>
         </div>
-        <div class="row-half left master">
+        <div class="row-half left wider-master">
           <div class="updates-navigation">
             <div id="updates-slider-prev" class="nav-item">
               <img class="nav-btn" src="/assets/left.png" alt="Left Navigation Arrow.">
