--- a/contact.html
+++ b/contact.html
@@ -16,20 +16,14 @@
     <header>
       <div id="top-strip-container" class="white">
         <div id="top-strip" class="section-container">
-          <div id="logo">
-            <a class="main" href="/index.html"
-              ><img
-                class="white-logo"
-                src=""
-                alt="EducationUSA Logo."
-            /></a>
-            <a class="main" href="/index.html"
-              ><img
-                class="default-logo"
-                src=""
-                alt="EducationUSA Logo."
-            /></a>
-          </div>
+        <div id="logo">
+          <a class="main" href="/index.html"
+            ><img
+              class="logo"
+              src="/assets/logo.svg"
+              alt="EducationUSA Logo."
+          /></a>
+        </div>
   
           <div id="mobile-menu-button">
             <img src="/assets/menu.svg" alt="Mobile  Menu." />
@@ -89,7 +83,7 @@
                 News
               </div>
               <div data-mobile-menu-index="5" class="mobile-menu-link">
-                <a href="/index.html">Apply</a>
+                <a href="/application.html">Apply</a>
               </div>
               <div data-mobile-menu-index="6" class="mobile-menu-link"><a href="">Login</a></div>
             </div>
