--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
               <div class="extras">
                 Not a member? <span id="signup-btn" class="accented-text">Sign up now!</span>
               </div>
+              <div id="close-modal" class="close btn ">
+                close modal
+              </div>
             </div>
             <div id="sign-up" data-auth-target="signup" class="auth-element">
               <div class="input-container">
@@ -140,6 +143,9 @@
               </div>
               <div class="extras">
                 Alredy a member? <span id="signin-btn" class="accented-text">Sign in now!</span>
+              </div>
+              <div id="close-modal" class="close btn">
+                close modal
               </div>
             </div>
           </div>
