--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <div class="extras">
                 Not a member? <span id="signup-btn" class="accented-text">Sign up now!</span>
               </div>
-              <div id="close-modal" class="close btn ">
+              <div data-close-modal="close-modal" class="close btn ">
                 close modal
               </div>
             </div>
@@ -144,7 +144,7 @@
               <div class="extras">
                 Alredy a member? <span id="signin-btn" class="accented-text">Sign in now!</span>
               </div>
-              <div id="close-modal" class="close btn">
+              <div data-close-modal="close-modal" class="close btn">
                 close modal
               </div>
             </div>
