--- a/index.html
+++ b/index.html
@@ -202,14 +202,14 @@
                       class="leading-text header-text"
                     >
                       <!-- --- -->
-                      Loan at your <br />
-                      finger-tips.
+                      Sponsoring the <br> NEXT GENERATION <br> of
+                      African Leaders
                     </span>
                     <span id="banner-small-text" class="tagline">
                       <!-- --- -->
-                      Explore our unbeatable interest rate with no equity
-                      <br />
-                      contribution required.
+                      EducationUSA is a platform that is created to support bright <br>
+                      African Students with little or financial stamina when its <br>
+                      comes to furthering their education.
                     </span>
                     <button id="banner-button" class="btn solid">
                       <a id="banner-button-link" href="/shortTermLoan.html">
@@ -233,50 +233,17 @@
                       class="leading-text header-text"
                     >
                       <!-- --- -->
-                      Create more value for <br />
-                      your fixed deposit.
+                      Sponsoring the <br> NEXT GENERATION <br> of
+                      African Leaders
                     </span>
                     <span id="banner-small-text" class="tagline">
                       <!-- --- -->
-                      Leverage on the strength of your fixed deposit placed
-                      with <br />
-                      the bank by exploring our Cash Backed Facility.
+                      EducationUSA is a platform that is created to support bright <br>
+                      African Students with little or financial stamina when its <br>
+                      comes to furthering their education.
                     </span>
                     <button id="banner-button" class="btn solid">
                       <a id="banner-button-link" href="/cashBacked.html">
-                        <!-- --- -->
-                        Learn More
-                      </a>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div
-              data-slide="3"
-              class="banner-slide-container animate__slower"
-            >
-              <div class="banner-slide">
-                <div class="banner-slide-description-container">
-                  <div class="banner-slide-description">
-                    <span
-                      id="banner-large-text"
-                      class="leading-text header-text"
-                    >
-                      <!-- --- -->
-                      We help Nigerians in <br />
-                      Diaspora become <br />
-                      homeowners
-                    </span>
-                    <span id="banner-small-text" class="tagline">
-                      Our Diaspora Mortgage product is designed to enable
-                      <br />
-                      Nigerians in diaspora buy a house in an approved
-                      location of <br />
-                      their choice in Nigeria.
-                    </span>
-                    <button id="banner-button" class="btn solid">
-                      <a id="banner-button-link" href="/disporaMortgage.html">
                         <!-- --- -->
                         Learn More
                       </a>
@@ -294,7 +261,6 @@
               ></div>
               <div data-slide-control-index="1" class="slide-dot"></div>
               <div data-slide-control-index="2" class="slide-dot"></div>
-              <div data-slide-control-index="3" class="slide-dot"></div>
             </div>
           </div>
         </div>
