--- a/aboutUs.html
+++ b/aboutUs.html
@@ -204,6 +204,9 @@
               <div class="header-text medium-text">
                 Project Timeline
               </div>
+              <div class="details-paragraph">
+                <img src="/assets/timeline.svg" alt="EducationUSA Appliation Timeline.">
+              </div>
             </div>
           </div>
         </section>
