--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
               <iframe
                 width="100%"
                 height="315"
-                src="https://www.youtube.com/embed/cnjVfT-PtZg"
+                src="https://www.youtube.com/watch?v=PLoy31dvLfQ"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
