--- a/index.html
+++ b/index.html
@@ -345,7 +345,8 @@
         <div class="beneficiaries-list">
           <div class="beneficiary">
             <div class="beneficiary-image">
-
+              <div class="image-tag"></div>
+              <img src="/assets/svg2.png" alt="Beneficiary.">
             </div>
             <div class="beneficiary-name medium-text">
               Emerson Joseph
@@ -358,7 +359,8 @@
           </div>
           <div class="beneficiary">
             <div class="beneficiary-image">
-
+              <div class="image-tag"></div>
+              <img src="/assets/svg2.png" alt="Beneficiary.">
             </div>
             <div class="beneficiary-name medium-text">
               Emerson Joseph
@@ -371,7 +373,8 @@
           </div>
           <div class="beneficiary">
             <div class="beneficiary-image">
-
+              <div class="image-tag"></div>
+              <img src="/assets/svg2.png" alt="Beneficiary.">
             </div>
             <div class="beneficiary-name medium-text">
               Emerson Joseph
@@ -384,7 +387,8 @@
           </div>
           <div class="beneficiary">
             <div class="beneficiary-image">
-
+              <div class="image-tag"></div>
+              <img src="/assets/svg2.png" alt="Beneficiary.">
             </div>
             <div class="beneficiary-name medium-text">
               Emerson Joseph
