--- a/application/undergraduate.html
+++ b/application/undergraduate.html
@@ -197,7 +197,7 @@
             </div>
             <div class="application-tab-targets">
               <div data-tab-target="1" class="application-tab-target selected">
-                <form id="undergraduate-form" data-form-staircase="1">
+                <form id="graduate-form" data-form-staircase="1">
                   <div class="form-header">
                     <div class="title header-text">
                       personal information
@@ -252,6 +252,45 @@
                     <div class="input-container">
                       <label for="father_occupation">If parents are deceased, state name, relationship to you, occupation/workplace of your legal guardian:</label>
                       <input data-form-input type="text" name="guardian_details" class="">
+                    </div>
+                  </div>
+                  <div data-form-step="2" class="form-body">
+                    <div class="input-container">
+                      <label for="siblings_details">Number of direct siblings, their ages, and for each one, state whether or not they are in university, which university and in what grade or form or level::</label>
+                      <textarea data-form-input type="text" name="siblings_details" class=""> </textarea>
+                    </div>
+                    <div class="input-container">
+                      <label for="other_dependants">Number of other dependent people currently living with and supported by your family and their relationships to you::</label>
+                      <textarea data-form-input type="text" name="other_dependants" class=""> </textarea>
+                    </div>
+                    <div class="input-container">
+                      <label for="university_fee">How much was your school fees in University (inclusive of housing) for Final school year:</label>
+                      <input data-form-input type="text" name="university_fee" class="">
+                    </div>
+                    <div class="input-container">
+                      <label for="university_fee_sponsor">Who paid your university fees?:</label>
+                      <input data-form-input type="text" name="university_fee_sponsor" class="">
+                    </div>
+                    <div class="input-container">
+                      <label for="relative_details">If your fees are paid by a relative other than your parents, how many other children’s fees are paid for by this same person? Do you live with this relative?</label>
+                      <input data-form-input type="text" name="relative_details" class="">
+                    </div>
+                    <div class="input-container">
+                      <label for="school_abscence">Have you or your siblings ever missed a significant part of a school term(s) because of finances or strike(s)? IF so, please explain:</label>
+                      <textarea data-form-input type="text" name="school_abscence" class=""> </textarea>
+                    </div>
+                    <div class="input-container">
+                      <label for="address_for_stay">
+                        <span class="accented-text">Question 17 is for those from outside of Lagos and Abuja area only</span> <br>
+                        17. If you live far from Lagos and Abuja, do you have someone you can stay with in Lagos or Abuja when you are attending OFP meetings or taking exams? Please state person's name, relationship to you, physical address and contact telephone number:
+                      </label>
+                      <input data-form-input type="text" name="address_for_stay" class="">
+                    </div>
+                  </div>
+                  <div data-form-step="3" class="form-body">
+                    <div class="input-container">
+                      <label for="other_details">18. What else should we know about your economic and personal background, your family and your financial situation? Feel free to use an extra page if this space is too small so we can truly understand your situation.</label>
+                      <textarea data-form-input type="text" name="other_details" class=""> </textarea>
                     </div>
                   </div>
                 </form>
