--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,9 @@
                     About Us
                   </div>
                 </a>
-                <div data-menu-index="2" class="menu-link">Scholars</div>
+                <a href="/beneficiaries.html">
+                  <div data-menu-index="2" class="menu-link">Scholars</div>
+                </a>
                 <div data-menu-index="3" class="menu-link">
                   Impact
                 </div>
@@ -73,7 +75,9 @@
               <div data-mobile-menu-index="1" class="mobile-menu-link">
                 <a href="/aboutUs.html">About Us</a>
               </div>
-              <div data-mobile-menu-index="2" class="mobile-menu-link">Scholars</div>
+              <a href="/beneficiaries.html">
+                <div data-mobile-menu-index="2" class="mobile-menu-link">Scholars</div>
+              </a>
               <div data-mobile-menu-index="3" class="mobile-menu-link">
                 Impact
               </div>
@@ -83,7 +87,7 @@
               <div data-mobile-menu-index="5" class="mobile-menu-link">
                 <a href="/application.html">Apply</a>
               </div>
-              <div id="login-nav-btn" data-mobile-menu-index="6" class="mobile-menu-link">Login</div>
+              <div id="mobile-login-nav-btn" data-mobile-menu-index="6" class="mobile-menu-link">Login</div>
             </div>
           </div>
         </div>
