--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                   About Us
                 </div>
               </a>
-              <div data-menu-index="2" class="menu-link">Scholars</div>
+              <a href="/beneficiaries.html">
+                  <div data-menu-index="2" class="menu-link">Scholars</div>
+                </a>
               <div data-menu-index="3" class="menu-link">
                 Impact
               </div>
@@ -70,7 +72,9 @@
             <div data-mobile-menu-index="1" class="mobile-menu-link">
               <a href="/aboutUs.html">About Us</a>
             </div>
-            <div data-mobile-menu-index="2" class="mobile-menu-link">Scholars</div>
+            <a href="/beneficiaries.html">
+                <div data-mobile-menu-index="2" class="mobile-menu-link">Scholars</div>
+              </a>
             <div data-mobile-menu-index="3" class="mobile-menu-link">
               Impact
             </div>
